force-app/main/default/objects/Policy__c/fields/Annual_Premium__c.field-meta.xml
<CustomField>
    <fullName>Annual_Premium__c</fullName>
    <label>Annual Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>