force-app/main/default/objects/Policy__c/fields/Cancelled_On__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_On__c</fullName>
    <label>Cancelled On</label>
    <type>DateTime</type>
</CustomField>