force-app/main/default/objects/Policy__c/fields/Insurance_Product__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurance Product</label>
    <referenceTo>Insurance_Product__c</referenceTo>
    <relationshipLabel>Policies</relationshipLabel>
    <relationshipName>Policies</relationshipName>
    <type>Lookup</type>
</CustomField>