force-app/main/default/objects/Policy__c/fields/Is_Legacy__c.field-meta.xml
<CustomField>
    <fullName>Is_Legacy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Legacy</label>
    <type>Checkbox</type>
</CustomField>