force-app/main/default/objects/Policy__c/fields/Issued_On__c.field-meta.xml
<CustomField>
    <fullName>Issued_On__c</fullName>
    <label>Issued On</label>
    <type>DateTime</type>
</CustomField>