force-app/main/default/objects/Policy__c/fields/Monthly_Premium__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Premium__c</fullName>
    <label>Monthly Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>