force-app/main/default/objects/Policy__c/fields/Policy_Status__c.field-meta.xml
<CustomField>
    <fullName>Policy_Status__c</fullName>
    <label>Policy Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Issued</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Lapsed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Matured</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>