force-app/main/default/objects/Policy__c/fields/Premium_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Premium_Due_Date__c</fullName>
    <label>Premium Due Date</label>
    <type>Date</type>
</CustomField>