force-app/main/default/objects/Policy__c/fields/Source_System_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_System_Id__c</fullName>
    <label>Source System Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>