force-app/main/default/objects/Policy__c/fields/Termination_Reason__c.field-meta.xml
<CustomField>
    <fullName>Termination_Reason__c</fullName>
    <label>Termination Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>